# scaling_law

./: .gitignore  README.md  analyze_scaling.py  best_program.py  best_program_gpt5.py  bigger_models.csv  evaluation.py  evaluator.py  generate_scaling_dataset.py  generate_scaling_datasets.py  get_model_params_example.py  local_data_loader.py  logprobs_init_program.py  logprobs_scaling_config.yaml  logprobs_scaling_dataset.csv  logprobs_scaling_dataset_full.csv  logprobs_scaling_law.yaml  pyproject.toml
SLD/: best_program.py  data_loader.py  final_mixed_evaluator.py  mixed_evaluator.py  mixed_init_program.py
SLD/configs/: logprobs_mixed_scaling_law.yaml  logprobs_scaling_law.yaml
data/: generate_model_infos.py  lm_eval.py  model_info.csv  models.csv
mixed/: final_mixed_evaluator.py  logprobs_mixed_scaling_law.yaml  mixed_evaluator.py
mixed.additive/: data_loader.py  generate_scaling_datasets.py  mixed_init_program.py
mixed.additive.task_split/: data_loader.py  final_mixed_evaluator.py  generate_scaling_datasets.py  logprobs_mixed_scaling_law.yaml  mixed_evaluator.py
standardization/: data_loader.py  evaluator.py  final_evaluator.py  generate_scaling_datasets.py  init_program.py  logprobs_scaling_law.yaml
tools/: extract_logprobs_from_results.py
